--- a/web-app/templates/aprs.html
+++ b/web-app/templates/aprs.html
@@ -13,14 +13,14 @@
             <select class="form-control" id='type_aprs'>
                 <option value="prefix">Prefix</option>
                 <option value="entry">Entry</option>
-                <option value="radius">Radius</option>
+                <option value="radius" selected>Radius</option>
             </select>
         </div>
         <div class="col-md-4">
             <label>Property</label>
             <select class="form-control" id='prop_aprs'>
+                <option value="speed" selected>Speed</option>
                 <option value="altitude">Altitude</option>
-                <option value="speed">Speed</option>
                 <option value="course">Course</option>
                 <option value="none">None</option>
             </select>
@@ -28,12 +28,9 @@
         <div class="col-md-4">
             <label>Time</label>
             <select class="form-control" id='time_aprs'>
-                <option value="t_100">100</option>
-                <option value="t_500">500</option>
-                <option value="t_1000">1000</option>
-                <option value="t_5000">5000</option>
-                <option value="t_10000">10000</option>
-                <option value="t_50000">50000</option>
+                {%for time in times%}
+                <option value="{{time}}">{{times[time]}}</option>
+                {%endfor%}
             </select>
         </div>
     </div>
@@ -42,7 +39,7 @@
             <div class="chart" id="map_aprs">
                 <script>
                     var graphs = {{ map_aprs | safe}};
-                    Plotly.plot('map_aprs', graphs.data, graphs.layout, {displayModeBar: false});
+                    Plotly.plot('map_aprs', graphs.data, graphs.layout, { displayModeBar: false });
                 </script>
             </div>
         </div>
@@ -52,7 +49,7 @@
             <div class="chart" id="plot_speed">
                 <script>
                     var graphs = {{ plot_speed | safe}};
-                    Plotly.plot('plot_speed', graphs.data, graphs.layout, {displayModeBar: false});
+                    Plotly.plot('plot_speed', graphs.data, graphs.layout, { displayModeBar: false });
                 </script>
             </div>
         </div>
@@ -62,7 +59,7 @@
             <div class="chart" id="plot_alt">
                 <script>
                     var graphs = {{ plot_alt | safe}};
-                    Plotly.plot('plot_alt', graphs.data, graphs.layout, {displayModeBar: false});
+                    Plotly.plot('plot_alt', graphs.data, graphs.layout, { displayModeBar: false });
                 </script>
             </div>
         </div>
@@ -72,7 +69,7 @@
             <div class="chart" id="plot_course">
                 <script>
                     var graphs = {{ plot_course | safe}};
-                    Plotly.plot('plot_course', graphs.data, graphs.layout, {displayModeBar: false});
+                    Plotly.plot('plot_course', graphs.data, graphs.layout, { displayModeBar: false });
                 </script>
             </div>
         </div>
