--- a/web-app/templates/iot.html
+++ b/web-app/templates/iot.html
@@ -61,12 +61,9 @@
     <div class="col-md-4">
       <label>Time</label>
       <select class="form-control" id='time_iot'>
-        <option value="t_100">100</option>
-        <option value="t_500">500</option>
-        <option value="t_1000">1000</option>
-        <option value="t_5000">5000</option>
-        <option value="t_10000">10000</option>
-        <option value="t_50000">50000</option>
+        {%for time in times%}
+        <option value="{{time}}">{{times[time]}}</option>
+        {%endfor%}
       </select>
     </div>
   </div>
@@ -75,7 +72,7 @@
       <div class="chart" id="graph_iot">
         <script>
           var graphs = {{ plot | safe}};
-          Plotly.plot('graph_iot', graphs.data, graphs.layout, {displayModeBar: false});
+          Plotly.plot('graph_iot', graphs.data, graphs.layout, { displayModeBar: false });
         </script>
       </div>
     </div>
