--- a/web-app/static/styles/footer.css
+++ b/web-app/static/styles/footer.css
@@ -1,23 +1,21 @@
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
+/* html {
     position: relative;
     min-height: 100%;
   }
 body {
-  /* Margin bottom by footer height */
   margin-bottom: 60px;
+}  */
+.margin {
+  height: 60px;
 }
-/* .footer-margin {
-  height: 100px;
-} */
-.footer {
+/* .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
   height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;
   background-color: #f5f5f5;
-}
+} */
   
