--- a/web-app/templates/galleries.html
+++ b/web-app/templates/galleries.html
@@ -13,7 +13,7 @@
     {%for gallery in row%}
     <div class="col-md-2">
       <a href="{{gallery['kk6gpv_link']}}">
-        <p align=center><img src="{{gallery['thumb']}}" alt="{{gallery['caption']}}" width="100%" class="rounded"></p>
+        <p align=center><img src="{{gallery['thumb']}}" alt="{{gallery['caption']}}" width="100%"></p>
       </a>
       <p align=center>{{gallery['caption']}}</p>
     </div>
