--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -81,6 +81,7 @@
     </nav>
     {% block body %}{% endblock %}
     <script src="{{ url_for('static', filename='js/plots.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/gauges.js') }}"></script>
 </body>
 
 <!-- Footer -->
