--- a/web-app/static/styles/footer.css
+++ b/web-app/static/styles/footer.css
@@ -18,4 +18,13 @@ body {
   line-height: 60px;
   background-color: #f5f5f5;
 } */
-  
+
+/* .card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 5;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
+   */
