--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -42,7 +42,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/iot">IOT</a>
+                    <a class="nav-link" href="/iot">IoT</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/aprs">APRS</a>
