--- a/web-app/templates/aprs.html
+++ b/web-app/templates/aprs.html
@@ -8,30 +8,33 @@
 </div>
 <div class="container" id="aprs">
     <div class="row">
-        <div class="col-md-4">
-            <label>Type</label>
-            <select class="form-control" id='type_aprs'>
-                <option value="prefix">Prefix</option>
-                <option value="entry">Entry</option>
-                <option value="radius" selected>Radius</option>
-            </select>
-        </div>
-        <div class="col-md-4">
-            <label>Property</label>
-            <select class="form-control" id='prop_aprs'>
-                <option value="speed" selected>Speed</option>
-                <option value="altitude">Altitude</option>
-                <option value="course">Course</option>
-                <option value="none">None</option>
-            </select>
-        </div>
-        <div class="col-md-4">
-            <label>Time</label>
-            <select class="form-control" id='time_aprs'>
-                {%for time in times%}
-                <option value="{{time}}">{{times[time]}}</option>
-                {%endfor%}
-            </select>
+        <div class="card">
+
+            <div class="col-md-4">
+                <label>Type</label>
+                <select class="form-control" id='type_aprs'>
+                    <option value="prefix">Prefix</option>
+                    <option value="entry">Entry</option>
+                    <option value="radius" selected>Radius</option>
+                </select>
+            </div>
+            <div class="col-md-4">
+                <label>Property</label>
+                <select class="form-control" id='prop_aprs'>
+                    <option value="speed" selected>Speed</option>
+                    <option value="altitude">Altitude</option>
+                    <option value="course">Course</option>
+                    <option value="none">None</option>
+                </select>
+            </div>
+            <div class="col-md-4">
+                <label>Time</label>
+                <select class="form-control" id='time_aprs'>
+                    {%for time in times%}
+                    <option value="{{time}}">{{times[time]}}</option>
+                    {%endfor%}
+                </select>
+            </div>
         </div>
     </div>
     <div class="row">
