--- a/web-app/templates/aprs.html
+++ b/web-app/templates/aprs.html
@@ -1,128 +1,156 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container">
-    <h1>APRS</h1>
-    <br>
-    <p>Click <a href="/">here</a> to go home.</p>
-</div>
 <div class="container" id="aprs">
-    <div class="card">
-        <div class="row">
-            <div class="col-md-4">
-                <label>Type</label>
-                <select class="form-control" id='type_aprs'>
-                    <option value="prefix">Prefix</option>
-                    <option value="entry">Entry</option>
-                    <option value="radius" selected>Radius</option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <label>Property</label>
-                <select class="form-control" id='prop_aprs'>
-                    <option value="speed" selected>Speed</option>
-                    <option value="altitude">Altitude</option>
-                    <option value="course">Course</option>
-                    <option value="none">None</option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <label>Time</label>
-                <select class="form-control" id='time_aprs'>
-                    {%for time in times%}
-                    <option value="{{time}}">{{times[time]}}</option>
-                    {%endfor%}
-                </select>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="chart" id="map_aprs">
-                    <script>
-                        var graphs = {{ map_aprs | safe}};
-                        Plotly.plot('map_aprs', graphs.data, graphs.layout, { displayModeBar: false });
-                    </script>
+    <h1>APRS</h1>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card-deck mt-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title" align=center>Type</h5>
+                    </div>
+                    <br>
+                    <div class="col-md">
+                        <select class="form-control" id='type_aprs'>
+                            <option value="prefix">Prefix</option>
+                            <option value="entry">Entry</option>
+                            <option value="radius" selected>Radius</option>
+                        </select>
+                    </div>
+                    <br>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title" align=center>Property</h5>
+                    </div>
+                    <br>
+                    <div class="col-md">
+                        <select class="form-control" id='prop_aprs'>
+                            <option value="speed" selected>Speed</option>
+                            <option value="altitude">Altitude</option>
+                            <option value="course">Course</option>
+                            <option value="none">None</option>
+                        </select>
+                    </div>
+                    <br>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title" align=center>Time</h5>
+                    </div>
+                    <br>
+                    <div class="col-md">
+                        <select class="form-control" id='time_aprs'>
+                            {%for time in times%}
+                            <option value="{{time}}">{{times[time]}}</option>
+                            {%endfor%}
+                        </select>
+                    </div>
+                    <br>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="chart" id="plot_speed">
-                    <script>
-                        var graphs = {{ plot_speed | safe}};
-                        Plotly.plot('plot_speed', graphs.data, graphs.layout, { displayModeBar: false });
-                    </script>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card-deck mt-4">
+                <div class="card">
+                    <div class="chart" id="map_aprs">
+                        <script>
+                            var graphs = {{ map_aprs | safe}};
+                            Plotly.plot('map_aprs', graphs.data, graphs.layout, { displayModeBar: false });
+                        </script>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="chart" id="plot_alt">
-                    <script>
-                        var graphs = {{ plot_alt | safe}};
-                        Plotly.plot('plot_alt', graphs.data, graphs.layout, { displayModeBar: false });
-                    </script>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card-deck mt-4">
+                <div class="card">
+                    <div class="chart" id="plot_speed">
+                        <script>
+                            var graphs = {{ plot_speed | safe}};
+                            Plotly.plot('plot_speed', graphs.data, graphs.layout, { displayModeBar: false });
+                        </script>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="chart" id="plot_course">
-                    <script>
-                        var graphs = {{ plot_course | safe}};
-                        Plotly.plot('plot_course', graphs.data, graphs.layout, { displayModeBar: false });
-                    </script>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card-deck mt-4">
+                <div class="card">
+                    <div class="chart" id="plot_alt">
+                        <script>
+                            var graphs = {{ plot_alt | safe}};
+                            Plotly.plot('plot_alt', graphs.data, graphs.layout, { displayModeBar: false });
+                        </script>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="table-responsive-md">
-                    <table class="table table-hover table-sm" id="packets">
-                        <thead>
-                            <tr>
-                                <th scope="col">Timestamp</th>
-                                <th scope="col">From</th>
-                                <th scope="col">To</th>
-                                <th scope="col">Latitude</th>
-                                <th scope="col">Longitude</th>
-                                <th scope="col">Speed</th>
-                                <th scope="col">Altitude</th>
-                                <th scope="col">Course</th>
-                                <th scope="col">Raw</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for row in rows %}
-                            <tr>
-                                <td>{{ row['timestamp_'] }}</td>
-                                <td>{{ row['from'] }}</td>
-                                <td>{{ row['to'] }}</td>
-                                <td>{{ row['latitude'] }}</td>
-                                <td>{{ row['longitude'] }}</td>
-                                <!-- <td>{{ row['speed'] }}</td>
-                            <td>{{ row['altitude'] }}</td>
-                            <td>{{ row['course'] }}</td>
-                            <td>{{ row['raw'] }}</td> -->
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card-deck mt-4">
+                <div class="card">
+                    <div class="chart" id="plot_course">
+                        <script>
+                            var graphs = {{ plot_course | safe}};
+                            Plotly.plot('plot_course', graphs.data, graphs.layout, { displayModeBar: false });
+                        </script>
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="log-event"></div>
-        <div id="log-layout"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card-deck mt-4">
+                <div class="card">
+                    <div class="table-responsive-md">
+                        <table class="table table-hover table-sm" id="packets">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Timestamp</th>
+                                    <th scope="col">From</th>
+                                    <th scope="col">To</th>
+                                    <th scope="col">Latitude</th>
+                                    <th scope="col">Longitude</th>
+                                    <th scope="col">Speed</th>
+                                    <th scope="col">Altitude</th>
+                                    <th scope="col">Course</th>
+                                    <!-- <th scope="col">Raw</th> -->
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for row in rows %}
+                                <tr>
+                                    <td>{{ row['timestamp_'] }}</td>
+                                    <td>{{ row['from'] }}</td>
+                                    <td>{{ row['to'] }}</td>
+                                    <td>{{ row['latitude'] }}</td>
+                                    <td>{{ row['longitude'] }}</td>
+                                    <td>{{ row['speed'] }}</td>
+                                    <td>{{ row['altitude'] }}</td>
+                                    <td>{{ row['course'] }}</td>
+                                    <!-- <td>{{ row['raw'] }}</td> -->
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div id="log-event"></div>
+            <div id="log-layout"></div>
+        </div>
     </div>
 </div>
 {% endblock %}
